--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="content">
             <div class="text">
                 <h2>adidas, <br> running shoes</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Adidas, in full Adidas AG, German manufacturer of athletic shoes and apparel and sporting goods. In the early 21st century it was the largest sportswear manufacturer in Europe and the second largest (after Nike) in the world.</p>
             </div>
             <div class="image">
                 <img src="imgs/kisspng-adidas-originals-shoe-white-sneakers-adidas-running-shoes-products-in-kind-5a74dbc75d24f8.2541154815176078793815 (1).png" alt="">
