--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="imgs/adidas_PNG23.png">
     <link rel="stylesheet" href="css/style.css">
     <title>Adidas Shoes Simple Clone</title>
+    <meta name="google-site-verification" content="cA453yRrOfy23zkQotT-18FNderh1aaqd3QpWx6CZSU"/>
 </head>
 <body>
     <div class="container">
